k8s/applications/web/nextcloud/collabora-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-collabora
  namespace: nextcloud
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - office.k8s.eudald.gr
  rules:
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: max-age=15552000; includeSubDomains
      backendRefs:
        - name: nextcloud-collabora
          port: 9980
